--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -5,8 +5,32 @@
     <title>Title</title>
 </head>
 <body>
-<h1 th:text="'List of Pet Owners'">
+<h1 th:text="'List of Owners'">
 
 </h1>
+<table>
+    <tr>
+        <th>
+            ID
+        </th>
+        <th>
+           First Name
+        </th>
+        <th>
+            Last Name
+        </th>
+    </tr>
+    <tr th:each="owner: ${owners}">
+        <td th:text="${owner?.id}">
+            123
+        </td>
+        <td th:text="${owner?.firstName}">
+            Spring in action
+        </td>
+        <td th:text="${owner?.lastName}">
+            Wrox
+        </td>
+    </tr>
+</table>
 </body>
 </html>
