--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -5,8 +5,34 @@
     <title>Title</title>
 </head>
 <body>
+<!--/*@thymesVar id="vet" type="com.jasdev.sfgpetclinic.model.Vet"*/-->
 <h1 th:text="'List of Vets'">
 
 </h1>
+<table>
+    <tr>
+        <th>
+            ID
+        </th>
+        <th>
+            First Name
+        </th>
+        <th>
+            Last Name
+        </th>
+    </tr>
+    <tr th:each="vet: ${vets}">
+        <td th:text="${vet?.id}">
+            123
+        </td>
+        <td th:text="${vet?.firstName}">
+            Spring in action
+        </td>
+        <td th:text="${vet?.lastName}">
+            Wrox
+        </td>
+    </tr>
+</table>
+</body>
 </body>
 </html>
